Update README.md
first revision